--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="facebook_app_id">120202058628715</string>
     <string name="fb_login_protocol_scheme">fb120202058628715</string>
     <string name="action_settings">Settings</string>
+    <string name="error">Error</string>
 </resources>
