--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="fb_login_protocol_scheme">fb120202058628715</string>
     <string name="action_settings">Settings</string>
     <string name="error">Error</string>
+    <string name="logout">Logout</string>
 </resources>
