--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="action_settings">Settings</string>
     <string name="error">Error</string>
     <string name="logout">Logout</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
