--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@ public class NavigationActivity extends AppCompatActivity {
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_test">Test</string>
+    <string name="title_activity_ongoing_map">Map</string>
 </resources>
