Fix Double Feed Bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,8 @@ public class NavigationActivity extends AppCompatActivity {
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_test">Test</string>
     <string name="title_activity_ongoing_map">Map</string>
+    <string name="star_unit">star</string>
+    <string name="fork_unit">forks</string>
     <plurals name="fork_unit">
         <item quantity="one">%d Fork</item>
         <item quantity="other">%d Forks</item>
