--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,7 @@ public class NavigationActivity extends AppCompatActivity {
     <string name="fork_unit">forks</string>
     <string name="loading">Loading..</string>
     <string name="back_arrow">&#xf060;</string>
+    <string name="no_internet">No Internet</string>
     <plurals name="fork_unit">
         <item quantity="one">%d Fork</item>
         <item quantity="other">%d Forks</item>
@@ -156,4 +157,8 @@ public class NavigationActivity extends AppCompatActivity {
         <item quantity="one">%d Star</item>
         <item quantity="other">%d Stars</item>
     </plurals>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_feeds">FeedsActivity</string>
 </resources>
