--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,5 @@ public class NavigationActivity extends AppCompatActivity {
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_feeds">FeedsActivity</string>
+    <string name="title_activity_feeds">Feeds</string>
 </resources>
